# array

./: .buckconfig  .clang-format  .gitignore  ArrayConfig.cmake.in  BUCK  CMakeLists.txt  LICENSE  README.md  array.hpp  buckaroo.lock.toml  buckaroo.toml  c_cpp_properties.json  main  main.cpp  makefile
.github/workflows/: cmake-single-platform.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  main  test_runner  test_runner-b12d07c_include.cmake  test_runner-b12d07c_tests.cmake
include/: array.hpp
test/: array_tests.cpp  main.cpp
toolchains/: BUCK
